--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.home_link{
+    position: relative;
+}
+
+.home_link::before{
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-color: #46A358;
+    bottom: -28px;
+}
