--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
 .home_link{
     position: relative;
+    display: inline-block;
 }
 
 .home_link::before{
@@ -14,7 +14,21 @@
     height: 3px;
     background-color: #46A358;
     bottom: -28px;
+    transform: scale(1);
+    transform-origin: center;
+    animation: scaleIn 0.4s ease-in-out forwards;
 }
+
+@keyframes scaleIn {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1); 
+  }
+}
+
+
 
 .swiper {
     width: 100%;
@@ -35,4 +49,35 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+
+
+  .loader {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    position: relative;
+    animation: rotate 1s linear infinite
+  }
+  .loader::before {
+    content: "";
+    box-sizing: border-box;
+    position: absolute;
+    inset: 0px;
+    border-radius: 50%;
+    border: 5px solid #FFF;
+    animation: prixClipFix 2s linear infinite ;
+  }
+
+  @keyframes rotate {
+    100%   {transform: rotate(360deg)}
+  }
+
+  @keyframes prixClipFix {
+      0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+      25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+      50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+      75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+      100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
   }
