--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,25 @@
     animation: scaleIn 0.4s ease-in-out forwards;
 }
 
+.tag-name{
+    position: relative;
+    display: inline-block;
+}
+
+.tag-name::before{
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 3px;
+    background-color: #46A358;
+    bottom: -10px;
+    transform: scale(1);
+    transform-origin: center;
+    animation: scaleIn 0.4s ease-in-out forwards;
+}
+
+
+
 @keyframes scaleIn {
   0% {
     transform: scale(0);
