--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,11 @@
 }
 
 
+.input-range__label{
+  display: none !important;
+}
+
+
 
 @keyframes scaleIn {
   0% {
@@ -100,3 +105,4 @@
       75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
       100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
   }
+
